Added back signature security scheme
